# ani-mm

./: .gitignore  CHANGELOG.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
animm/: __init__.py  alanine_dipeptide.py  ani.py  ani_openmm.py  cli.py  convert.py  gui.py  openmm_runner.py  version.py
docs/: development.md  index.md  live-viewer.md  user-guide.md
docs/api/: alanine_dipeptide.md  ani.md  ani_openmm.md  convert.md  openmm_runner.md
scripts/: install_latest_torchani.sh
src/animm/: alanine_dipeptide.py  cli.py  convert.py  openmm_runner.py
tests/: conftest.py  test_alanine_helper.py  test_ani_energy_forces.py  test_basic.py  test_cli.py  test_convert.py  test_live_viewer.py  test_models.py  test_run_ani_md.py  test_species_tensor.py  test_traced_dtype.py
